tests/profile/error/camera/gotogeo_wrongtype_anchor.profile
{
  "version": { "major": 12, "minor": 13 },
  "camera": {
    "type": "goToGeo",
    "anchor": 1.0,
    "latitude": 1.0,
    "longitude": 2.0,
    "altitude": 4.0
  }
}
